<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+998"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/mobilePhone"
        android:hint="977471717"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name_or_organization_name"
        />
    <EditText
        android:id="@+id/name"
        android:hint="@string/azamat_rasulov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/backDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:text="@string/back"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />
    <Button
        android:id="@+id/orderDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:text="@string/order"
        />
    </LinearLayout>
</LinearLayout>