<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/broiler"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:clickable="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/calculatedFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/calculatedFor"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/dayDayF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculatedFor"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/quantityDayF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dayDayF"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/stringArray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quantityDayF"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/table"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <TableRow>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/corm"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/premix"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/all"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/cormAll"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/premixAll"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
        </TableRow>
        <TableRow
            android:id="@+id/rowStart"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/startType"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/start"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/cormStart"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/premixStart"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
        </TableRow>
        <TableRow
            android:id="@+id/rowRost"
            android:visibility="gone"
            >
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/rost"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/cormRost"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/premixRost"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
        </TableRow>
        <TableRow
            android:id="@+id/rowFinish"
            android:visibility="gone"
            >
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/finish"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/cormFinish"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/premixFinish"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
        </TableRow>
        <TableRow
            android:id="@+id/rowFinish2"
            android:visibility="gone"
            >
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/finish_2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/cormFinish2"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
            <TextView
                android:id="@+id/premixFinish2"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="16sp"
                android:background="@drawable/rectangle_white_border"
                android:textColor="@color/colorWhite" />
        </TableRow>
    </TableLayout>
        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/overallPrice"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/table"
            />
    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/priceLabel"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:text="@string/order"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backButtonDayF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>