<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/broiler"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:clickable="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/nearestWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/dayWeightF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nearestWeight"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/quantityWeightF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dayWeightF"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/stringArrayWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantityWeightF"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TableLayout
            android:id="@+id/table"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            app:layout_constraintTop_toBottomOf="@+id/topLayout">

            <TableRow>
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/corm"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/premix"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
            </TableRow>
            <TableRow>
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/all"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/cormAllWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/premixAllWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
            </TableRow>
            <TableRow
                android:id="@+id/rowStartWeight"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/startTypeWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/start"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/cormStartWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/premixStartWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
            </TableRow>
            <TableRow
                android:id="@+id/rowRostWeight"
                android:visibility="gone"
                >
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/rost"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/cormRostWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/premixRostWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
            </TableRow>
            <TableRow
                android:id="@+id/rowFinishWeight"
                android:visibility="gone"
                >
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/finish"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/cormFinishWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/premixFinishWeight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
            </TableRow>
            <TableRow
                android:id="@+id/rowFinish2Weight"
                android:visibility="gone"
                >
                <TextView
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/finish_2"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/cormFinish2Weight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/premixFinish2Weight"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textSize="16sp"
                    android:background="@drawable/rectangle_white_border"
                    android:textColor="@color/colorWhite" />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/priceLabelWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/overallPrice"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/table"
            />
        <TextView
            android:id="@+id/priceWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/priceLabelWeight"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/orderButtonWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:text="@string/order"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backButtonWeightF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>